--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,18 @@
 {
+  "compilerOptions": {
+    "lib": [
+      "deno.ns",
+      "dom",
+      "dom.iterable",
+      "deno.unstable",
+      "dom.asynciterable",
+      "esnext"
+    ]
+  },
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
   "imports": {
     "@std/fs": "jsr:@std/fs@^0.229.3"
-  },
-  "compilerOptions": {
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
-    ]
   }
 }
