--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,15 @@
 {
-  "name": "@nobody/patina_deno",
+  "workspace": [
+    "./example"
+  ],
+  "name": "@nobody/patina",
   "version": "0.1.0",
   "exports": {
     ".": "./mod.ts"
   },
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "npm:preact",
     "lib": [
       "deno.ns",
       "dom",
@@ -16,8 +21,5 @@
   },
   "tasks": {
     "dev": "deno run --watch mod.ts"
-  },
-  "imports": {
-    "@std/fs": "jsr:@std/fs@^0.229.3"
   }
 }
