--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -39,3 +39,17 @@ jobs:
 
       - name: Run tests
         run: deno test -A
+  release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: test
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v4
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
+      - name: Publish lib
+        run: deno publish
