--- a/deno.json
+++ b/deno.json
@@ -23,6 +23,6 @@
     "dev": "deno run --watch mod.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@^1.0.19"
   }
 }
