--- a/example/deno.json
+++ b/example/deno.json
@@ -4,16 +4,16 @@
     "@std/cli": "jsr:@std/cli@^1.0.28",
     "@std/http": "jsr:@std/http@^1.0.25",
     "@std/path": "jsr:@std/path@^1.1.4",
-    "esbuild": "npm:esbuild@^0.25.12",
+    "esbuild": "npm:esbuild@^0.27.3",
     "esbuild_deno_loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
     "preact": "npm:preact@^10.28.4",
     "react": "npm:react@^19.2.4",
-    "styled-components-deno": "jsr:@nobody/styled-components-deno@^0.10.8",
-    "@nobody/tananoni": "jsr:@nobody/tananoni@^0.5.0"
+    "styled-components-deno": "jsr:@nobody/styled-components-deno@^0.11.1",
+    "@nobody/tananoni": "jsr:@nobody/tananoni@^0.6.0-beta1"
   },
   "tasks": {
-    "start": "deno run -A build.ts",
-    "release": "deno run -A build.ts --release"
+    "start": "deno run --unstable-bundle -A build.ts",
+    "release": "deno run --unstable-bundle -A build.ts --release"
   },
   "lint": {
     "exclude": [
